class indicators
